fixing spacing

--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ and (min-width: 1200px){
       border-bottom: 0px solid #aaa;
       padding: 0 0 0 0px;
       background-color: none;
-      font-size: 2.0em;
+      font-size: 1.8em;
       font-weight: bold;
 }
 
